5.1.9 -> 5.1.10:
    - jbj: rpmbf: backport from HEAD.
    - jbj: solve: commit to a test framework based on EDOS and Poky.
    - jbj: solve: use RPMTAG_PACKAGEORIGIN paths when available.
    - jbj: solve: loop over solve db's in a bag.
    - jbj: solve: stub-in toy add/del methods.
    - jbj: solve: permit multiple solvedb's in a rpmbag.
    - jbj: solve: generalize %_dbpath to permit multiple rpmdb's.
    - jbj: solve: flip --aid "opt-in" behavior to --noaid "opt-out".
    - jbj: solve: fix: don't free the package file name when depsolving.
    - jbj: tests: backport the IDMS install for coverage testing w sqlite3.
    - jbj: sqlite: fix: avoid assert failure w %trigger* SECONDARY-SEQENTIAL
	retrieval using ony secondary keys for performance.
    - jbj: tests: "make check" for RHEL6 beta passes.
    - jbj: backport "make check" sufficient to verify signatures.
    - jbj: tests: re-enable additional build options.
    - jbj: tests: "make check" for RHEL6 beta passes.
    - jbj: rescusitate existing "make check" reference points.
    - jbj: selinux: fix: disabler bit toggle sense was inverted.
    - jbj: change default dep whiteout to ensure filessystem before setup.
    - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
    - jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
    - rse: align semantics of Lua function rpm.hostname() with the C API function buildHost()

5.1.8 -> 5.1.9:
    - rse: fix release tarball rolling after recent addition of local copies of XZ, PCRE and Syck

5.1.7 -> 5.1.8:
    - jbj: adjust loader maps for lua.
    - rse: fix building under all combinations (none/internal/external) of Lua and PCRE
    - rse: upgrade devtool.conf and INSTALL to the latest tools from HEAD
    - jbj: EVRtuple: eliminate the old EVR parser.
    - jbj: yarn: convert rpmluav to usage mutex with refcounts
    - jbj: yarn: convert rpmlua to usage mutex with refcounts