@@ -1,4 +1,5 @@
 5.1.9 -> 5.1.10:
+    - jbj: solve: use rpmbf to filter narcisstic path dependencies.
     - jbj: rpmbf: backport from HEAD.
     - jbj: solve: commit to a test framework based on EDOS and Poky.
     - jbj: solve: use RPMTAG_PACKAGEORIGIN paths when available.
